--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,24 @@
 alembic==1.4.2
 aniso8601==8.0.0
+certifi==2020.6.20
+chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.4
 gunicorn==20.0.4
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.1
+requests==2.24.0
+requests-toolbelt==0.9.1
 six==1.15.0
 SQLAlchemy==1.3.19
+urllib3==1.25.10
 Werkzeug==1.0.1
